spring security - login custom filter

--- a/server/login-custom-filter/src/main/resources/templates/loginForm.html
+++ b/server/login-custom-filter/src/main/resources/templates/loginForm.html
@@ -11,7 +11,7 @@
 
 <div class="container center-contents">
     <div class="row">
-        <form class="form-signin" method="post" th:action="@{/loginprocess}">
+        <form class="form-signin" method="post" th:action="@{/login}">
             <h1 class="h3 mb-3 font-weight-normal"> 로그인 </h1>
             <label for="username" class="sr-only"> 로그인 아이디 </label>
             <input type="text"
@@ -32,7 +32,13 @@
                     <input type="checkbox" name="remember-me"> Remember me
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block"  type="submit"> 로그인 </button>
+
+            <div class="type-select">
+                <input type="radio" name="type" value="student" checked> 학생
+                <input type="radio" name="type" value="teacher"> 선생님
+            </div>
+
+            <button class="btn btn-lg btn-primary btn-block" type="submit"> 로그인</button>
             <div class="error-message" th:if="${loginError}">
                 <span> 아이디나 패스워드가 올바르지 않습니다. </span>
             </div>
@@ -41,6 +47,6 @@
     </div>
 </div>
 
-<script th:src="@{/js/bootstrap.js}" />
+<script th:src="@{/js/bootstrap.js}"/>
 </body>
 </html>
